syntax = "proto3";

package viralforge.media.v1;

option go_package = "github.com/viralforge/mesh/contracts/proto/media/v1;mediav1";

service MediaInternalService {
  rpc GetPreviewUrl(GetPreviewUrlRequest) returns (GetPreviewUrlResponse);
  rpc GetAssetMetadata(GetAssetMetadataRequest) returns (GetAssetMetadataResponse);
}

message GetPreviewUrlRequest {
  string asset_id = 1;
  int32 expiry_seconds = 2;
}

message GetPreviewUrlResponse {
  string preview_url = 1;
  int64 expires_at = 2;
}

message GetAssetMetadataRequest {
  string asset_id = 1;
}

message GetAssetMetadataResponse {
  string asset_id = 1;
  string content_type = 2;
  int64 file_size_bytes = 3;
  int32 width = 4;
  int32 height = 5;
  double duration_seconds = 6;
  string codec = 7;
}
